Fixed Full Text Not Showing Issue

--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ body {
 	
 	0%
 	{
-		background-position: left 0px top 0px;
+		background-position: left 0px top 80px;
 	}
 	
 	40%
@@ -140,22 +140,22 @@ body {
 	
 	30%
 	{
-		width: 700px;
+		width: 720px;
 		height: 0px;
 	}
 	60%
 	{
-		width: 700x;
+		width: 720x;
 		height: 155px;
 	}	
 	80%
 	{
-		width: 700px;
+		width: 720px;
 		height: 155px;
 	}
 	100%
 	{
-		width: 700px;
+		width: 720px;
 		height: 155px;
 	}
 }
